@@ -3,6 +3,7 @@ Revision history for Dist-Zilla-Plugin-StaticInstall
 {{$NEXT}}
           - no longer mark this distribution as experimental or DANGEROUS! in
             abstract
+          - now checking for files in lib other than .pod, .pm (RT#127556)
 
 0.011     2017-08-20 01:02:03Z
           - fix prereqs for things only used optionally in tests
